--- a/.gitignore
+++ b/.gitignore
@@ -130,8 +130,8 @@ dmypy.json
 
 # Visual Studio Code
 .vscode/* 
-!.vscode/settings.json 
-!.vscode/tasks.json 
-!.vscode/launch.json 
-!.vscode/extensions.json 
+.vscode/settings.json 
+.vscode/tasks.json 
+.vscode/launch.json 
+.vscode/extensions.json 
 .history
